--- a/src/component/Footer/Footer.css
+++ b/src/component/Footer/Footer.css
@@ -1,5 +1,5 @@
 footer {
-  background-color: #F8F4E1;
+  background-color: #2d2d2d;
   display: flex;
   justify-content: center;
   width: 100dvw;
@@ -30,11 +30,14 @@ footer .container {
 .box-logo h1 {
   margin: 0;
   font-size: 28px;
+  color: white;
 }
 
 .box-logo p {
   margin: 20px 0;
   font-size: 16px;
+  color: white;
+
 }
 
 .icons {
@@ -59,6 +62,8 @@ footer .container {
   margin-bottom: 20px;
   font-weight: 500;
   font-size: 20px;
+  color: white;
+
 }
 
 .box ul {
@@ -69,6 +74,12 @@ footer .container {
 .box ul li {
   margin-bottom: 10px;
   font-size: 16px;
+  color: white;
+
+}
+
+.link ul li a {
+  text-decoration: none;
 }
 
 .box ul li::before {
