--- a/src/component/Navbar/Navbar.css
+++ b/src/component/Navbar/Navbar.css
@@ -13,10 +13,8 @@ html, body {
   height: 50px;
   padding: 28px 30px;
   box-shadow: 0 2px 4px rgba(206, 10, 10, 0.1);
-  background: linear-gradient(to top,
-rgba(0.3, 0, 0.4, 0.3),transparent
-), url("C:/Users/UNNI/Documents/PetSales/furry-finds/src/Assets/bg3.png");
-}
+  background-color: #2d2d2d;
+ background-blend-mode: multiply,multiply;}
 .logo {
   display: flex;
   width: 64px;
@@ -28,7 +26,7 @@ rgba(0.3, 0, 0.4, 0.3),transparent
   font-family: 'Teko';
   font-size: 25px;
   width: 25px;
-  color: hsl(0, 0%, 2%);
+  color: hsl(0, 0%, 100%);
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -110,7 +108,7 @@ justify-content: center;
 .nav-links1 ul li a {
   text-decoration: none;
   font-family: 'Josefin Sans';
-  color: #151515;
+  color: #ffffff;
   font-size: 22px;
   font-weight: 800;
   padding: 1px 10px;
@@ -142,7 +140,7 @@ justify-content: center;
 .nav-links2 ul li a {
   text-decoration: none;
   font-family: 'Josefin Sans';
-  color: #161616;
+  color: #f7f7f7;
   font-size: 22px;
   font-weight: 800;
   padding: 5px 10px;
@@ -155,7 +153,7 @@ justify-content: center;
   color: #fff;
 }
   .cart-icon{
-    color: #000000;
+    color: #f7f7f7;
     font-size: 1.3rem; 
     margin-right: 8px; 
     vertical-align: middle;
